# ddd-sample-microservice

./: .gitignore  README.md
lms/: Cargo.toml  README.md  ddb.sh
lms/docker/dynamodb/: shared-local-instance.db
lms/docs/: catalog.dot  checkout.dot  deps.py  hold.dot  patrons.dot
lms/src/: books.rs  catalog.rs  checkout.rs  core.rs  gateway.rs  lib.rs  library.rs  main.rs  parties.rs  patrons.rs  utils.rs
lms/src/books/: domain.rs  dto.rs  factory.rs  repository.rs
lms/src/books/domain/: model.rs
lms/src/books/repository/: ddb_book_repository.rs
lms/src/catalog/: command.rs  controller.rs  domain.rs  factory.rs
lms/src/catalog/command/: add_book_cmd.rs  get_book_cmd.rs  remove_book_cmd.rs  update_book_cmd.rs
lms/src/catalog/domain/: service.rs
lms/src/checkout/: command.rs  controller.rs  domain.rs  dto.rs  factory.rs  repository.rs
lms/src/checkout/command/: checkout_book_cmd.rs  return_book_cmd.rs
lms/src/checkout/domain/: model.rs  service.rs
lms/src/checkout/repository/: ddb_checkout_repository.rs
lms/src/core/: command.rs  controller.rs  domain.rs  events.rs  library.rs  repository.rs
lms/src/gateway/: ddb.rs  events.rs  factory.rs  sns.rs
lms/src/gateway/ddb/: publisher.rs
lms/src/gateway/sns/: publisher.rs
lms/src/hold/: command.rs  controller.rs  domain.rs  dto.rs  factory.rs  repository.rs
lms/src/hold/command/: cancel_hold_book_cmd.rs  checkout_hold_book_cmd.rs  (+1 more)
lms/src/parties/: factory.rs  repository.rs
lms/src/patrons/: command.rs  controller.rs  domain.rs  dto.rs  factory.rs
lms/src/utils/: date.rs  ddb.rs
(+13 files in other folders)
